<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.opsc7312poepart2_code.ui.register_client.RegisterClientFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="158dp"
            android:layout_height="57dp"
            android:backgroundTint="@color/lightblue"
            android:text="Register"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.949" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="158dp"
            android:layout_height="57dp"
            android:backgroundTint="@color/lightblue"
            android:text="Cancel"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.845"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.949" />

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="174dp"
            android:layout_height="98dp"
            android:text="Dentist Diary"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.852"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075" />

        <ImageView
            android:id="@+id/iLogo"
            android:layout_width="197dp"
            android:layout_height="181dp"
            android:src="@drawable/icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.029" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="90dp"
            android:layout_height="43dp"
            android:text="Name:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.335" />

        <EditText
            android:id="@+id/etxtName"
            android:layout_width="194dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.806"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.337" />

        <TextView
            android:id="@+id/txtSurname"
            android:layout_width="90dp"
            android:layout_height="43dp"
            android:text="Surname:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.437" />

        <EditText
            android:id="@+id/etxtSurname"
            android:layout_width="197dp"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.817"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.434" />

        <TextView
            android:id="@+id/txtEmailLabel"
            android:layout_width="90dp"
            android:layout_height="43dp"
            android:text="Email:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.527" />

        <EditText
            android:id="@+id/etxtEmail"
            android:layout_width="197dp"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.836"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53" />

        <TextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="124dp"
            android:layout_height="45dp"
            android:text="Phone Number:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.625" />

        <EditText
            android:id="@+id/etxtPhoneNumber"
            android:layout_width="201dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.625" />

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="124dp"
            android:layout_height="45dp"
            android:text="Username:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.727" />

        <EditText
            android:id="@+id/etxtUsername"
            android:layout_width="201dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.727" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="124dp"
            android:layout_height="45dp"
            android:text="Password:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.841" />

        <EditText
            android:id="@+id/etxtPassword"
            android:layout_width="201dp"
            android:layout_height="45dp"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.841"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/icon_view_password"
            android:layout_width="42dp"
            android:layout_height="36dp"
            android:clickable="true"
            android:contentDescription="View Password"
            android:focusable="true"
            android:src="@drawable/visible_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.992"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.83" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
