<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_register_client"
            android:title="Register - Client" />
        <item
            android:id="@+id/nav_register_dentist"
            android:title="Register - Dentist" />
        <item
            android:id="@+id/nav_login_client"
            android:title="Login - Client" />
        <item
            android:id="@+id/nav_login_dentist"
            android:title="Login - Dentist" />
    </group>
</menu>