<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.opsc7312poepart2_code.ui.register_dentist.RegisterDentistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon_view_password"
            android:layout_width="42dp"
            android:layout_height="36dp"
            android:clickable="true"
            android:contentDescription="View Password"
            android:focusable="true"
            android:src="@drawable/visible_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.802" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="158dp"
            android:layout_height="57dp"
            android:backgroundTint="@color/lightblue"
            android:text="Register"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.949" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="158dp"
            android:layout_height="57dp"
            android:backgroundTint="@color/lightblue"
            android:text="Cancel"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.845"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.949" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="90dp"
            android:layout_height="43dp"
            android:text="Email:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.527" />

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="90dp"
            android:layout_height="43dp"
            android:text="Address:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.623" />

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="90dp"
            android:layout_height="43dp"
            android:text="Username:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.722" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="90dp"
            android:layout_height="43dp"
            android:text="Password:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.811" />

        <TextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="124dp"
            android:layout_height="45dp"
            android:text="Phone Number:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="90dp"
            android:layout_height="43dp"
            android:text="Name:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.335" />

        <EditText
            android:id="@+id/etxtName"
            android:layout_width="203dp"
            android:layout_height="47dp"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.86"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.336" />

        <AutoCompleteTextView
            android:id="@+id/etxtAddress"
            android:layout_width="203dp"
            android:layout_height="47dp"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.86"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.627" />

        <EditText
            android:id="@+id/etxtUsername"
            android:layout_width="203dp"
            android:layout_height="47dp"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.86"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.726" />

        <EditText
            android:id="@+id/etxtPassword"
            android:layout_width="203dp"
            android:layout_height="47dp"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.86"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.815" />

        <EditText
            android:id="@+id/etxtEmail"
            android:layout_width="203dp"
            android:layout_height="47dp"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.86"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53" />

        <EditText
            android:id="@+id/etxtPhoneNumber"
            android:layout_width="203dp"
            android:layout_height="47dp"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.86"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.429" />

        <ImageView
            android:id="@+id/iLogo"
            android:layout_width="197dp"
            android:layout_height="181dp"
            android:src="@drawable/icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.029" />

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="174dp"
            android:layout_height="98dp"
            android:text="Dentist Diary"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.852"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>